--- a/Bluke/Base.lproj/MainMenu.xib
+++ b/Bluke/Base.lproj/MainMenu.xib
@@ -21,13 +21,19 @@
         </customObject>
         <menu id="oGt-rG-jkE">
             <items>
+                <menuItem title="Activate" id="Ty2-BE-UNo">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="activateClicked:" target="f6h-eZ-bvF" id="JCG-4m-68a"/>
+                    </connections>
+                </menuItem>
                 <menuItem title="Selected Devices" id="hGn-Ya-CX5">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Selected Devices" id="qYz-Rf-aVJ"/>
                 </menuItem>
                 <menuItem title="Preferences..." keyEquivalent="," id="lDS-tx-MBU">
                     <connections>
-                        <action selector="showPreferencesWindow:" target="Voe-Tx-rLC" id="Ecx-vV-Jvj"/>
+                        <action selector="showPreferences:" target="Voe-Tx-rLC" id="VC4-ff-mlp"/>
                     </connections>
                 </menuItem>
                 <menuItem title="Quit" keyEquivalent="q" id="9GI-u9-Qnq">
